Issue #31: various changes