@@ -3,7 +3,6 @@ package tex;
 import java.io.*;
 import java.util.*;
 
-import org.apache.commons.io.FileUtils;
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -67,7 +66,7 @@ public class TexProject {
   }
 
   private void read() throws IOException, JSONException {
-    String content = FileUtils.readFileToString(mProjectFile);
+    String content = Files.readString(mProjectFile);
     mDefaults = new JSONObject(content);
   }
 
